--- a/tugas4/package.json
+++ b/tugas4/package.json
@@ -23,7 +23,8 @@
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
     "recyclerlistview": "^3.0.5",
-    "expo-av": "~10.2.0"
+    "expo-av": "~10.2.0",
+    "expo-updates": "~0.11.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
