--- a/tugas4/package.json
+++ b/tugas4/package.json
@@ -10,21 +10,22 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.2.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "expo": "~44.0.0",
+    "expo-av": "~10.2.0",
     "expo-calendar": "~10.1.0",
     "expo-media-library": "~14.0.0",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
-    "recyclerlistview": "^3.0.5",
-    "expo-av": "~10.2.0",
-    "expo-updates": "~0.11.6"
+    "recyclerlistview": "^3.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
